--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,8 +36,8 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:design:25.3.1'
-    compile 'com.tencent.callsdk:callsdk:1.0.21' // Call SDK
-    compile 'com.tencent.ilivesdk:ilivesdk:1.5.0' // iLive SDK
+    compile 'com.tencent.callsdk:callsdk:1.0.21'
+    compile 'com.tencent.ilivesdk:ilivesdk:1.5.0'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'io.reactivex.rxjava2:rxjava:2.1.0'
     compile 'com.jakewharton.rxbinding2:rxbinding:2.0.0'
